--- a/GIT_UE4/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GIT_UE4/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -112,7 +112,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/StarterContent/Maps/Minimal_Default
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
