--- a/GIT_UE4/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GIT_UE4/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -869,4 +869,7 @@ SceneOutliner.LastCompileMethod=Unknown
 HierarchicalLODOutliner.TimeStamp=2020.03.23-15.56.51
 HierarchicalLODOutliner.LastCompileMethod=Unknown
 
+[MRU]
+MRUItem0=/Game/StarterContent/Maps/Minimal_Default
+
 
