--- a/GIT_UE4/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GIT_UE4/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -127,7 +127,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Sergi
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
